Small modification on input arguments

--- a/Spatial_Pyramid_Pooling.ipynb
+++ b/Spatial_Pyramid_Pooling.ipynb
@@ -265,7 +265,7 @@
         "\"\"\"\n",
         "spp_layer = jax.vmap(spatial_pyramid_pool, in_axes=(0, None, None, None), out_axes=0)\n",
         "batched_feature_maps = feature_maps = jax.random.normal(key, (2, 16, 16, 512))\n",
-        "batched_features = spp_layer(batched_feature_maps, pool_levels, \"cf\", True)\n",
+        "batched_features = spp_layer(batched_feature_maps, pool_levels, \"cl\", True)\n",
         "print(batched_features.shape)"
       ],
       "metadata": {
